# GraphTsetlinMachine

./: setup.py
GraphTsetlinMachine/: kernels.py  tm.py
bindings/: CMakeLists.txt  cuda_kernel_launcher.cu  cuda_xorwow.cu  graph_tsetlin_machine_nb.cpp
